# ThreatFalcon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: capture_fixtures.rs
src/: config.rs  events.rs  index.rs  investigate.rs  main.rs  output.rs  pe.rs  process_cache.rs  sensor.rs  service.rs  spool.rs  state.rs
src/collectors/: etw.rs  evasion.rs  mod.rs  sysmon.rs  sysmon_parser.rs
tests/: cli.rs
