[package]
name = "threatfalcon"
version = "0.1.0"
edition = "2021"
description = "Lightweight endpoint telemetry sensor for Windows threat detection"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
async-trait = "0.1"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_EventLog",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Time",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
