[package]
name = "threatfalcon"
version = "0.3.0"
edition = "2021"
description = "Lightweight endpoint telemetry sensor for Windows threat detection"
license = "MIT"
repository = "https://github.com/uky007/ThreatFalcon"
readme = "README.md"
keywords = ["security", "edr", "telemetry", "etw", "windows"]
categories = ["os::windows-apis"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
async-trait = "0.1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_EventLog",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Time",
] }

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
